--- a/history.txt
+++ b/history.txt
@@ -6,3 +6,40 @@ echo $?
 sjdjdh
 cat
 cat
+cat in0.txt
+exit
+cat in0.txt
+exit
+cat in0.txt
+exit
+cat in0.txt
+cat in0.txt
+exit
+cat in0.txt
+exit
+cat in0.txt
+exit
+cat in0.txt
+cat in0.txt
+exit
+cat in0.txt
+exit
+cat in0.txt
+exit
+cat in0.txt
+exit
+cat in0.txt
+exit
+cat in0.txt
+exit
+cat in0.txt
+exit
+cat in0.txt
+echo hello
+cat in0.txt
+echo $?
+echo $? hello
+echo $? hello
+echo $HOME
+cat in0.txt
+exit
