--- a/history.txt
+++ b/history.txt
@@ -600,3 +600,10 @@ echo "hello""bye" hello""bye
 echo "hello" "bye" hello""bye
 echo hello""bye hello "hello"bye
 echo "hello'''bye"
+echo 'hello'
+echo hello
+echo 'hello'
+echo 'hello'
+echo hello'bye'
+echo 'bye'hello
+echo hello''bye 'bye'hello
